--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Psychtoolbox-3
-url: http://towolf.github.com/Psychtoolbox-3
+url: http://towolf.github.com
 permalink: pretty
 pygments: true
 markdown: kramdown
