--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@ title: Psychtoolbox-3
 url: http://towolf.github.com
 permalink: pretty
 pygments: true
-markdown: kramdown
-
-kramdown:
-  auto_ids: false
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..5
-  use_coderay: false
+# markdown: kramdown
+# 
+# kramdown:
+#   auto_ids: false
+#   footnote_nr: 1
+#   entity_output: as_char
+#   toc_levels: 1..5
+#   use_coderay: false
 
 # rdiscount:
 #   extensions: [smart, generate_toc]
