--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ permalink: pretty
 pygments: true
 markdown: redcarpet
 
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 # 
 # kramdown:
 #   auto_ids: false
