--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ kramdown:
   auto_ids: false
   toc_levels: 1..5
   use_coderay: true
+  hard_wrap: true
 
 # redcarpet:
 #     extensions: ["no_intra_emphasis", "fenced_code_blocks", "strikethrough", "autolink",
